# Hero-Check

./: .gitignore  README.md  agent.py  models.py  pyproject.toml  requirements.txt  sample_positioning.md
herocheck/: __init__.py  __main__.py  analyzer.py  cli.py  display.py  models.py  prompt.py  report.py  scraper.py
icps/: sample_cto.yaml  sample_senior_engineer.yaml  sample_vp_marketing.yaml
tests/: test_cli.py  test_models.py  test_prompt.py  test_report.py
